Prevent search identifier from overflowing into search boxes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,3 +139,7 @@ table {
 	display: flex;
 	flex-direction: column;
 }
+
+label.autoHyphen {
+	hyphens: auto;
+}
